# pesticide

./: .gitignore  .kakrc  .pesticide  Cargo.toml  Makefile  README.md  adapter.go  cmd.go  go.mod  go.sum  main.go  pest.1.scd  pesticide  pesticide.json  pesticide.toml  rustfmt.toml  session.go  ui.go
adapter/: adapter.go  config.go
command/: command.go
config/: config.go
legacy/: ui.go
message/: message.go
rc/: pesticide.kak
router/: command.go  dap.go  router.go
src/: adapter.rs  client.rs  config.rs  controller.rs  dap_codec.rs  dap_types.rs  kak.rs  kakoune.rs  main.rs  server.rs  types.rs  ui.rs
src/dap/: LICENSE  codec.rs  mod.rs  schema.rs
test/python/: other.py  pesticide.toml  test.py
ui/: command.go  command_history.go  dap.go  prompt.go  ui.go
