[package]
name = "pesticide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossterm = "0.23.2"
dirs = "4.0.0"
log = "0.4.16"
pico-args = "0.4.2"
simplelog = "0.12.0"
tui = "0.18.0"
